--- a/Keepa/public/index.html
+++ b/Keepa/public/index.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>React Docker App</title>
-  </head>
-  <body>
-    <div id="root"></div>
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <title>Keeper App</title>
+      <link
+        href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
+        rel="stylesheet"
+      />
+      <link rel="stylesheet" href="/styles.css" />
+    </head>
+    
+    <body>
+      <div id="root"></div>
+      <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
+
