[Refactoring] HTML and JS files: renamed index.js to index.jsx and updated script imports.

--- a/props/public/index.html
+++ b/props/public/index.html
@@ -7,7 +7,9 @@
     
     <body>
       <div id="root"></div>
-      <script type="module" src="/src/index.js"></script>
+      <!-- Leaving below script import causes errors
+        Just omit or delete index.js imports -->
+      <!-- <script type="module" src="/src/index.js"></script> -->
   </body>
 </html>
 
