--- a/Keepa/public/index.html
+++ b/Keepa/public/index.html
@@ -11,7 +11,9 @@
     
     <body>
       <div id="root"></div>
-      <script type="module" src="/src/index.jsx"></script>
+      <!-- Leaving below script import causes errors
+        Just omit or delete index.js imports -->
+      <!-- <script type="module" src="/src/index.js"></script> -->
   </body>
 </html>
 
